Fix search modal overlay z-index

--- a/app/component/search.scss
+++ b/app/component/search.scss
@@ -443,7 +443,7 @@ ul.react-autowhatever__items-list {
   top: 0px;
   left: 0px;
   position: fixed;
-  z-index: 803;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.541176);
 }
 
